2005-08-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp: fix a race when changing the mode and owner
	  of copied file.
	* pp/oparchive.cpp: warn if a file can't be copied, avoid to copy 
	  inexisting image for anon mammping

2005-08-11  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* libop/op_config.h: add --cpu-buffer-size for 2.6

2005-08-10  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: preserve as many of file attributes and
	  owner we can when copying a file. This affected running oparchive
	  with root right allowing non root user to read all archived binaries.
	  Problem started in cvs the 2005-08-07

2005-08-09  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_anon.c:
	* daemon/opd_kernel.c: fix two scanf potential buffer overflow

2005-08-09  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/cpu_type.c: fix #1254390, problem and solution
	  by Thomas Kho <tkho@users.sourceforge.net>

	* module/oprofile.c:
	* module/oprofile.h: fix a compilation problem with gcc <= 3.3. It's
	  not worth to try to continue to use fastcall for op_do_profile.

	* module/x86/op_model_p4.c: backport some change from the 2.6 driver:
	  on some P4 model 3 IQ_ESCR0/1 doesn't exist and acessing them fault.

2005-08-08  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opcontrol.1.in:
	* doc/oprofile.xml: document opcontrol --buffer-watershed

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* utils/opcontrol: implement 2.6 buffer_watershed

2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.h:
	* libutil++/file_manip.cpp: use iostream to copy file
	* libpp/populate.cpp: check_mtime() even when using archive: spec
	* pp/oparchive.cpp: fix comment

2005-08-07  Philippe Elie  <phil.el@wanadoo.fr>
